fixed trigger field covering video play/pause button area

--- a/your_nutritionist/frontend/src/Components/MediaCard/MediaCard.css
+++ b/your_nutritionist/frontend/src/Components/MediaCard/MediaCard.css
@@ -47,7 +47,7 @@
 }
 
 .media-card{ 
-    height: 35vh;
+    height: 45vh;
     width: 100%;
     max-width: 100%;
     max-height: 100%;
